# tkCommon

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.cmake.in  LICENSE  README.md
app/: Viewer2dgui.h  Viewer2dgui.ui  ViewerUI.h  tkCommon_can.cpp  tkCommon_canasc.cpp  tkCommon_carcontrol.cpp  tkCommon_carcontrol.cpp_disable  tkCommon_cmd.cpp  tkCommon_console.cpp  tkCommon_eigen_cuda.cu  tkCommon_eth_pcap.cpp  tkCommon_eth_socket.cpp  tkCommon_geoconv.cpp  tkCommon_joystick.cpp  tkCommon_keymap.cpp  tkCommon_lanelet_fix.cpp  tkCommon_matio.cpp  tkCommon_pcap_gui_replay.cpp  tkCommon_pcap_gui_replay.cpp_disable  tkCommon_pcap_replay.cpp  tkCommon_pool.cpp  tkCommon_ros_carcontrol.cpp  tkCommon_rt.cpp  tkCommon_segfault.cpp  tkCommon_sensor.cpp  tkCommon_terminal_color.cpp  tkCommon_terminal_format.cpp  tkGUI_2dgui.cpp  tkGUI_empty.cpp  tkGUI_new.cpp  tkGUI_sample.cpp  tkGUI_simple.cpp
app/test/: tkTest-00.cpp  tkTest-01.cpp  tkTest-02.cpp  tkTest-03.cpp
cmake/: DriveWorksConfig.cmake  FindDriveWorks.cmake  FindGeographicLib.cmake  FindROS.cmake  FindROS2.cmake  FindtkCommon.cmake  TOOLCHAIN-aarch64.cmake  tkCommonConfig.cmake  tkConf.cmake  tkExportConfig.cmake
data/: lanelet.osm  lanelet.osm.yaml  levante.mtl  tkLogo.pts
data/semaphore/: semaphore_body.mtl  semaphore_green.mtl  semaphore_red.mtl  semaphore_yellow.mtl
include/tkCommon/: CmdParser.h  CudaCommon.h  Map.h  PID.h  common.h  console.h  crc16autosar.h  cuda.h  exceptions.h  geodetic_conv.h  geometry.h  log.h  masaData.h  printTerminal.h  rosbag.h  sharedMemory.h  term_utils.h  terminalColor.h  terminalFormat.h  time.h  timer.h  utils.h
include/tkCommon/communication/: CanInterface.h  EthInterface.h  PCAPHandler.h  UDPSocket.h
include/tkCommon/communication/can/: README.m  VehicleCanParser.h  dbciterator.hpp  message.hpp  signal.hpp
include/tkCommon/communication/car/: CarControl.h  CarControlInterface.h
include/tkCommon/communication/ethernet/: AutosarEth.h  PCAPHandler.h  PacketParser.h  TCPSocket.h  UDPSocket.h  packet_parser.h
include/tkCommon/communication/serial/: SerialPort.h
include/tkCommon/data/: ActuationData.h  CalibData.h  CameraData.h  CanData.h  CloudData.h  ControlInputData.h  ControlOutputData.h  DataHeader.h  DepthData.h  GPS.h  GPSData.h  GPS_t.h  GpsData.h  GpsImuData.h  HeaderData.h  IMUData.h  ImageData.cpp  ImageData.h  ImuData.h  KistlerData.h  LidarData.h  OccupancyGridData.h  OdomData.h  PathData.h  PerceptionData.h  PoseData.h  RadarData.h  SensorData.h  SensorEthData.h  SonarData.h  StereoData.h  TwistData.h  VectorData.cpp  VectorData.h  VehicleData.h  XsensData.h
include/tkCommon/gui/: Buffer.h  Camera.h  Camera3D.h  Color.h  CommonViewer.h  Drawable.h  MathUtils.h  MouseView3D.h  OBJ_Loader.h  PlotManager.h  Shader.h  Texture.h  Viewer.h  ViewerNew.h  eigen_opengl_helpers.h  imgui.h  tkBufferGl.h  tkShader.h  tkTexture.h
include/tkCommon/gui/Drawables/: Axis.h  Cloud4f.h  Cloud4fFeatures.h  DrawBuffer.h  Drawable.h  Drawables.h  (+14 more)
include/tkCommon/joystick/: Joystick.h
include/tkCommon/lanelet/: Lanelet.h  LaneletInterface.h
include/tkCommon/math/: CSpline.h  CSpline2D.h  CSpline3D.h  LowPassFilter.h  MATio.h  Mat.h  MatIO.h  MatSimple.h  Vec.h  quantile.h  utils.h
include/tkCommon/nvidia/: driveworks.h
include/tkCommon/projection/: Projector.h
include/tkCommon/ros/: RosWrapper.h  Rosbag.h
include/tkCommon/rt/: Buffer.h  Lockable.h  Pool.h  Profiler.h  Task.h  Thread.h
include/tkCommon/sensor/: CameraStream.h  GpsOdom.h  LogManager.h  Sensor.h  SensorSpawner.h  SensorsManager.h
include/tkCommon/udp/: buffer_defines.h  udp_C_class.h  udp_C_unix_code.h  udp_C_win_code.h  udp_class.hh  udp_defines.h
scripts/: createNetGroup  osm2lanelet.py  setNetCap  tkCanUp  tkOusterAuto  tkOusterJson  tkOusterUp  tkRadarUp  tkVmpsUp  tkXsens680Up
src/: CmdParser.cpp  PID.cpp  common.cpp  console.cpp  log.cpp  version.cpp
src/communication/: CanInterface.cpp  EthInterface.cpp  PCAPHandler.cpp  UDPSocket.cpp
src/communication/car/: CarControl.cpp
src/communication/ethernet/: PCAPHandler.cpp  PacketParser.cpp  TCPSocket.cpp  UDPSocket.cpp
src/communication/serial/: SerialPort.cpp
src/data/: CloudData.cpp  HeaderData.cpp  RadarData.cpp
src/gui/: Buffer.cpp  Camera.cpp  Camera3D.cpp  CommonViewer.cpp  MathUtils.cpp  MouseView3D.cpp  PlotManager.cpp  Shader.cpp  Texture.cpp  Viewer.cpp  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp  lodepng.cpp  stb_image.cpp  tkBufferGl.cpp  tkShader.cpp  tkTexture.cpp
src/gui/Drawables/: Wrapper.cpp
src/gui/drawables/: Axis.cpp  CameraAR.cpp  Can.cpp  Cloud4f.cpp  DataDrawable.cpp  DrawBuffer.cpp  Gps.cpp  GpsImu.cpp  Grid.cpp  Image.cpp  ImageTexture.cpp  Kistler.cpp  LaneletMap.cpp  LaneletPath.cpp  Mesh.cpp  Odom.cpp  Plot.cpp  PolyLine.cpp  Prisms.cpp  Radar.cpp  RecordInfo.cpp  ReplayInfo.cpp  Sonar.cpp  Stereo.cpp  Text.cpp  Wrapper.cpp  imu.cpp
src/gui/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/gui/implot/: implot.cpp  implot_items.cpp
src/gui/libdrawtext/: draw.c  drawgl.c  drawrast.c  font.c  utf8.c
src/gui/shader/: axis.cpp  axisPlot.cpp  circle.cpp  cubes3D.cpp  grid.cpp  heightmap.cpp  lines.cpp  linesMonocolor.cpp  mesh.cpp  pointcloud3f.cpp  pointcloud4f.cpp  pointcloudColorMaps.cpp  pointcloudRGBA.cpp  simpleMesh.cpp  text.cpp  texture.cpp
src/gui/utils/: Buffer.cpp  Camera.cpp  CommonViewer.cpp  PerlinNoise.cpp  PlotManager.cpp  Shader.cpp  SimpleMesh.cpp  Texture.cpp  deprecated_primitives.cpp  stb_image.cpp  stbi_image_write.cpp
src/joystick/: Joystick.cpp
src/joystick/gamepad/: gamepad.cpp
src/lanelet/: LaneletInterface.cpp
src/math/: CSpline.cpp  CSpline2D.cpp  CSpline3D.cpp  Vec.cpp
src/projection/: Projector.cpp
src/ros/: RosWrapper.cpp
src/rt/: Profiler.cpp
src/sensor/: CameraStream.cpp  LogManager.cpp  Sensor.cpp  SensorManager.cpp
src/udp/: buffer_defines_hton.c  buffer_defines_ntoh.c  udp_C_class.c  udp_class.cc  udp_defines.c
(+320 files in other folders)
